// Original file: proto/toDo.proto

import type { TodoItem as _todoPackage_TodoItem, TodoItem__Output as _todoPackage_TodoItem__Output } from '../todoPackage/TodoItem';

export interface TodoItems {
  'items'?: (_todoPackage_TodoItem)[];
}

export interface TodoItems__Output {
  'items'?: (_todoPackage_TodoItem__Output)[];
}
